name:                   doki
version:                0.1.0.0
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Lib
  build-depends:        base
  default-language:     Haskell2010

executable doki-exe
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base, doki
  default-language:     Haskell2010

test-suite doki-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base, doki
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
