name:                   doki
version:                0.1.0.0
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Doki.Page, Doki.Page.Render, Doki.Wiki
  build-depends:        base,
                        containers,
                        either,
                        filepath,
                        HaXml,
                        process,
                        temporary
  ghc-options:          -Wall
  default-language:     Haskell2010

executable doki-exe
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base,
                        containers,
                        doki,
                        happstack-server,
                        HaXml,
                        MissingH,
                        pretty,
                        transformers
  default-language:     Haskell2010

test-suite doki-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base, containers, doki, HaXml, hspec, temporary
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
